crates/zeroship-runtime-macros/src/v8_class/snapshots/zeroship_runtime_macros__v8_class__snapshot_tests__class_marker_equals_receiver_errors.snap
---
source: crates/runtime-macros/src/v8_class/snapshot_tests.rs
expression: format_expansion(out)
---
::core::compile_error! {
    "#[v8_state_marker]: marker type matches impl receiver — remove the attribute (use #[v8_class] alone for the no-op path)"
}
