crates/zeroship-runtime-macros/src/v8_class/snapshots/zeroship_runtime_macros__v8_class__snapshot_tests__class_with_state_marker.snap
---
source: crates/zeroship-runtime-macros/src/v8_class/snapshot_tests.rs
expression: format_expansion(out)
---
impl State {
    fn new(start: u32) -> Result<State, OpError> {
        Ok(State { value: start })
    }
    fn touch(&mut self) -> u32 {
        self.value += 1;
        self.value
    }
    fn value(&self) -> u32 {
        self.value
    }
}
/// Per-class isolate-slot marker holding the cached
/// FunctionTemplate. Exists so `Foo::install` is idempotent
/// per isolate — required for `#[v8_inherit]` to chain
/// derived classes onto the SAME template the global was
/// bound to (otherwise `instanceof` walks a different
/// `[[FunctionPrototype]]` and returns false).
#[doc(hidden)]
#[allow(non_camel_case_types)]
pub struct __InstallSlot_Marker(::v8::Global<::v8::FunctionTemplate>);
/// Brand-check helper: true iff `obj` is a wrapper this runtime
/// branded as holding this class's state (or a derived class's,
/// via `#[v8_inherit]`).
#[doc(hidden)]
#[allow(non_snake_case, dead_code)]
fn __brand_check_Marker(scope: &mut v8::PinScope, obj: v8::Local<v8::Object>) -> bool {
    ::zeroship_runtime::macro_runtime::brand::is::<State>(scope, obj)
}
impl ::zeroship_runtime::macro_runtime::brand::ClassState for Marker {
    type State = State;
    const FIELD_COUNT: usize = 1usize;
}
impl Marker {
    /// Brand `obj`, whose internal field 0 holds `state` (a
    /// `Box` of this class's state), as a wrapper of this class
    /// and of every class it inherits from. Only
    /// `__zs_install` and a derived class's `__zs_brand` call
    /// it.
    #[doc(hidden)]
    pub fn __zs_brand(
        scope: &mut v8::PinScope,
        obj: v8::Local<v8::Object>,
        state: v8::Local<v8::External>,
    ) {
        ::zeroship_runtime::macro_runtime::brand::mark::<State>(scope, obj, state);
    }
    /// Install `state` as the native state of `obj`, a wrapper
    /// made from this class's template: box it into internal
    /// field 0 (and slot 1, for a class with fastcall methods),
    /// brand the wrapper, and drop the box when V8 collects it.
    ///
    /// `None`, with nothing installed, when `obj` lacks this
    /// class's internal fields or already holds a state.
    #[doc(hidden)]
    pub fn __zs_install<'__zs>(
        scope: &mut v8::PinScope<'__zs, '_>,
        obj: v8::Local<v8::Object>,
        state: State,
    ) -> ::core::option::Option<v8::Local<'__zs, v8::External>> {
        const __FIELD_COUNT: usize = <Marker as ::zeroship_runtime::macro_runtime::brand::ClassState>::FIELD_COUNT;
        if obj.internal_field_count() < __FIELD_COUNT {
            return ::core::option::Option::None;
        }
        if obj
            .get_internal_field(scope, 0)
            .is_some_and(|__field| v8::Local::<v8::External>::try_from(__field).is_ok())
        {
            return ::core::option::Option::None;
        }
        let __raw = ::std::boxed::Box::into_raw(::std::boxed::Box::new(state));
        let __raw_addr = __raw as usize;
        let __ext = v8::External::new(scope, __raw.cast());
        obj.set_internal_field(0, __ext.into());
        if __FIELD_COUNT > 1 {
            obj.set_aligned_pointer_in_internal_field(1, __raw.cast(), 0);
        }
        Self::__zs_brand(scope, obj, __ext);
        let __weak = v8::Weak::with_guaranteed_finalizer(
            scope,
            obj,
            ::std::boxed::Box::new(move || unsafe {
                drop(::std::boxed::Box::from_raw(__raw_addr as *mut State));
            }),
        );
        ::std::mem::forget(__weak);
        ::core::option::Option::Some(__ext)
    }
}
#[allow(non_snake_case, dead_code)]
impl Marker {
    /// Brand-check: returns `true` iff `value` is an instance
    /// of this class (or a subclass via `#[v8_inherit]`) in
    /// the current isolate.
    ///
    /// Non-Object values (primitives, null, undefined) return
    /// `false`, as does an isolate where the class hasn't been
    /// installed. Spec alignment: WebIDL §3.7 brand identity.
    ///
    /// This is the stable public entry point. The old
    /// `__zs_is_<Class>` shim has been removed, so this method
    /// now owns the `Local<Value>::try_into` gate directly.
    pub fn is_instance(scope: &mut v8::PinScope, value: v8::Local<v8::Value>) -> bool {
        let obj: v8::Local<v8::Object> = match value.try_into() {
            Ok(o) => o,
            Err(_) => return false,
        };
        __brand_check_Marker(scope, obj)
    }
}
#[allow(non_snake_case)]
impl ::zeroship_runtime::macro_runtime::__private::Sealed for Marker {}
#[allow(non_snake_case)]
impl ::zeroship_runtime::macro_runtime::V8ClassInstance for Marker {
    fn is_instance(scope: &mut ::v8::PinScope, value: ::v8::Local<::v8::Value>) -> bool {
        <Self>::is_instance(scope, value)
    }
}
#[allow(non_snake_case, dead_code)]
impl Marker {
    /// Install this class on the given V8 scope, returning the
    /// FunctionTemplate. The runtime calls this from
    /// `setup_globals` and uses the returned template to attach
    /// the class as a global (e.g. `globalThis.Headers`).
    ///
    /// Idempotent per isolate: subsequent calls return the same
    /// FunctionTemplate (looked up via an isolate slot keyed by
    /// the per-class `__InstallSlot_<Class>` marker type emitted
    /// by `#[v8_class]` at module scope). This is what makes
    /// `#[v8_inherit]` work — derived classes resolve the parent's
    /// template by calling the parent's install, which returns
    /// the cached template on the second call (the first call
    /// typically being the runtime's own register-as-global step).
    pub fn install<'s>(
        scope: &mut v8::PinScope<'s, '_>,
    ) -> v8::Local<'s, v8::FunctionTemplate> {
        if let Some(cached) = scope.get_slot::<__InstallSlot_Marker>() {
            return v8::Local::new(scope, cached.0.clone());
        }
        let __ctor_tmpl = ::zeroship_runtime::macro_runtime::callback::template(
            scope,
            __Marker_constructor_callback,
        );
        let __class_name = v8::String::new(scope, "Marker").unwrap();
        __ctor_tmpl.set_class_name(__class_name);
        __ctor_tmpl
            .instance_template(scope)
            .set_internal_field_count(
                <Marker as ::zeroship_runtime::macro_runtime::brand::ClassState>::FIELD_COUNT,
            );
        let __proto = __ctor_tmpl.prototype_template(scope);
        {
            let __key = v8::String::new(scope, "touch").unwrap();
            let __fn_tmpl = ::zeroship_runtime::macro_runtime::callback::template(
                scope,
                __Marker_touch_callback,
            );
            __proto.set(__key.into(), __fn_tmpl.into());
        }
        {
            let __key = v8::String::new(scope, "value").unwrap();
            let __getter_tmpl = ::zeroship_runtime::macro_runtime::callback::template(
                scope,
                __Marker_value_callback,
            );
            let __getter_arg: Option<v8::Local<v8::FunctionTemplate>> = Some(
                __getter_tmpl,
            );
            let __setter_arg: Option<v8::Local<v8::FunctionTemplate>> = None;
            __proto
                .set_accessor_property(
                    __key.into(),
                    __getter_arg,
                    __setter_arg,
                    v8::PropertyAttribute::NONE,
                );
        }
        {
            let __tag_sym = v8::Symbol::get_to_string_tag(scope);
            let __tag_value = v8::String::new(scope, "Marker").unwrap();
            __proto
                .set_with_attr(
                    __tag_sym.into(),
                    __tag_value.into(),
                    v8::PropertyAttribute::READ_ONLY | v8::PropertyAttribute::DONT_ENUM,
                );
        }
        let __global = ::v8::Global::new(scope, __ctor_tmpl);
        let __local = ::v8::Local::new(scope, __global.clone());
        scope.set_slot(__InstallSlot_Marker(__global));
        __local
    }
    /// Register this class on `globalThis` for the current isolate
    /// — the bare template+bind path consumed by
    /// `register_native_classes!` in `setup_globals`. Classes that
    /// need extras (legacy code constants, prototype-chain links,
    /// hand-rolled methods, …) keep a custom `install_global`
    /// alongside this and bypass the registration list.
    pub fn register<'s>(
        scope: &mut v8::PinScope<'s, '_>,
        global: v8::Local<v8::Object>,
    ) {
        let __tmpl = Self::install(scope);
        let __key = v8::String::new(scope, "Marker").unwrap();
        let __class_fn = __tmpl.get_function(scope).unwrap();
        global.set(scope, __key.into(), __class_fn.into());
    }
}
#[allow(non_snake_case, unused_variables, unused_mut, clippy::needless_borrow)]
pub(crate) fn __Marker_constructor_callback(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    _rv: v8::ReturnValue,
) {
    if !args.is_construct_call() {
        let __msg = v8::String::new(
                scope,
                "Failed to construct 'Marker': Please use the 'new' operator, this DOM object constructor cannot be called as a function.",
            )
            .unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    let __this = args.this();
    let start: u32 = args.get(0i32).uint32_value(scope).unwrap_or(0);
    let __instance: State = match <State>::new(start) {
        Ok(__v) => __v,
        Err(__err) => {
            if let ::zeroship_runtime::macro_runtime::state::OpErrorKind::JsValue(
                __global,
            ) = &(__err).kind
            {
                let __local = v8::Local::new(scope, __global);
                (scope).throw_exception(__local);
            } else {
                let __msg = ::zeroship_runtime::macro_runtime::strings::message(
                    scope,
                    &(__err).message,
                );
                let __exc: v8::Local<v8::Value> = match &(__err).kind {
                    ::zeroship_runtime::macro_runtime::state::OpErrorKind::TypeError => {
                        v8::Exception::type_error(scope, __msg)
                    }
                    ::zeroship_runtime::macro_runtime::state::OpErrorKind::RangeError => {
                        v8::Exception::range_error(scope, __msg)
                    }
                    ::zeroship_runtime::macro_runtime::state::OpErrorKind::DomException(
                        __name,
                    ) => {
                        ::zeroship_runtime::macro_runtime::dom::exception::build(
                                scope,
                                &(__err).message,
                                __name,
                            )
                            .into()
                    }
                    ::zeroship_runtime::macro_runtime::state::OpErrorKind::NodeError(
                        __code,
                    ) => {
                        ::zeroship_runtime::macro_runtime::node_error::build_node_exception(
                            scope,
                            __code,
                            &(__err).message,
                        )
                    }
                    ::zeroship_runtime::macro_runtime::state::OpErrorKind::CodedError {
                        code: __code,
                        hint: __hint,
                        status: __status,
                    } => {
                        let __exc = v8::Exception::error(scope, __msg);
                        if let Ok(__obj) = v8::Local::<v8::Object>::try_from(__exc) {
                            let __ck = v8::String::new(scope, "code").unwrap();
                            let __cv = ::zeroship_runtime::macro_runtime::strings::message(
                                scope,
                                __code,
                            );
                            __obj.set(scope, __ck.into(), __cv.into());
                            if let Some(__h) = __hint {
                                let __hk = v8::String::new(scope, "hint").unwrap();
                                let __hv = ::zeroship_runtime::macro_runtime::strings::message(
                                    scope,
                                    __h,
                                );
                                __obj.set(scope, __hk.into(), __hv.into());
                            }
                            if let Some(&__s) = __status.as_ref() {
                                let __sk = v8::String::new(scope, "status").unwrap();
                                let __sv = v8::Integer::new_from_unsigned(
                                    scope,
                                    u32::from(__s),
                                );
                                __obj.set(scope, __sk.into(), __sv.into());
                            }
                        }
                        __exc
                    }
                    ::zeroship_runtime::macro_runtime::state::OpErrorKind::Error => {
                        v8::Exception::error(scope, __msg)
                    }
                    ::zeroship_runtime::macro_runtime::state::OpErrorKind::JsValue(_) => {
                        unreachable!()
                    }
                };
                (scope).throw_exception(__exc);
            }
            return;
        }
    };
    if <Marker>::__zs_install(scope, __this, __instance).is_none() {
        let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
}
#[allow(non_snake_case, unused_variables, unused_mut, clippy::needless_borrow)]
pub(crate) fn __Marker_touch_callback(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    mut rv: v8::ReturnValue,
) {
    let __this = args.this();
    if !__brand_check_Marker(scope, __this) {
        let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    let __ext = match __this
        .get_internal_field(scope, 0)
        .and_then(|v| v8::Local::<v8::External>::try_from(v).ok())
    {
        Some(e) => e,
        None => {
            let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
            let __exc = v8::Exception::type_error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
    };
    let __inflight_addr = __ext.value() as usize;
    ::std::thread_local! {
        static __INFLIGHT: ::std::cell::Cell<[::std::option::Option<usize>; 8]> = ::std::cell::Cell::new(
            [::std::option::Option::None; 8],
        );
    }
    let __slot_index: ::std::option::Option<usize> = __INFLIGHT
        .with(|__s| {
            let mut __arr = __s.get();
            for __slot in __arr.iter() {
                if *__slot == ::std::option::Option::Some(__inflight_addr) {
                    return ::std::option::Option::None;
                }
            }
            for __i in 0..__arr.len() {
                if __arr[__i].is_none() {
                    __arr[__i] = ::std::option::Option::Some(__inflight_addr);
                    __s.set(__arr);
                    return ::std::option::Option::Some(__i);
                }
            }
            ::std::option::Option::Some(::std::usize::MAX)
        });
    match __slot_index {
        ::std::option::Option::None => {
            let __msg = v8::String::new(
                    scope,
                    "re-entered method `Marker::touch` on instance — concurrent &mut self callback",
                )
                .unwrap();
            let __exc = v8::Exception::type_error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
        ::std::option::Option::Some(::std::usize::MAX) => {
            let __msg = v8::String::new(
                    scope,
                    "re-entry depth exceeded for method `Marker::touch` (cap is 8 — a future raise requires a code change)",
                )
                .unwrap();
            let __exc = v8::Exception::type_error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
        ::std::option::Option::Some(_) => {}
    }
    struct __ReentryGuard(usize);
    impl ::std::ops::Drop for __ReentryGuard {
        fn drop(&mut self) {
            __INFLIGHT
                .with(|__s| {
                    let mut __arr = __s.get();
                    for __slot in __arr.iter_mut() {
                        if *__slot == ::std::option::Option::Some(self.0) {
                            *__slot = ::std::option::Option::None;
                            break;
                        }
                    }
                    __s.set(__arr);
                });
        }
    }
    let __reentry_guard = __ReentryGuard(__inflight_addr);
    let __instance = unsafe { &mut *(__ext.value() as *mut State) };
    let __r = <State>::touch(&mut *__instance);
    rv.set(v8::Integer::new_from_unsigned(scope, __r).into());
}
#[allow(non_snake_case, unused_variables, unused_mut, clippy::needless_borrow)]
pub(crate) fn __Marker_value_callback(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    mut rv: v8::ReturnValue,
) {
    let __this = args.this();
    if !__brand_check_Marker(scope, __this) {
        let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    let __ext = match __this
        .get_internal_field(scope, 0)
        .and_then(|v| v8::Local::<v8::External>::try_from(v).ok())
    {
        Some(e) => e,
        None => {
            let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
            let __exc = v8::Exception::type_error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
    };
    let __instance = unsafe { &*(__ext.value() as *const State) };
    let __r = <State>::value(&*__instance);
    rv.set(v8::Integer::new_from_unsigned(scope, __r).into());
}
